@@ -3,7 +3,7 @@ require_relative "simplify/replace_named_references"
 require_relative "simplify/replace_table_references"
 require_relative "simplify/replace_ranges_with_array_literals"
 require_relative "simplify/inline_formulae"
-require_relative "simplify/replace_formulae_with_calculated_values"
+require_relative "simplify/map_formulae_to_values"
 require_relative "simplify/replace_indirects_with_references"
 require_relative "simplify/replace_offsets_with_references"
 require_relative "simplify/replace_column_with_column_number"
